# concurrent-programming-in-Unix-systems

./: CMakeLists.txt  README.md  err.c  err.h  manager.c  player.c  proposition.h  room.h  shared_variables.h
